<resources>
    <string name="app_name">TubesPTBsejahtera</string>
    <string name="masuk_login">Masuk</string>
    <string name="dengan_akun_anda_login">Dengan Akun Anda</string>
    <string name="hint_pass">Masukan password anda disini</string>
    <string name="hint_email">Masukan email anda disini</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="masuk_tombol">Masuk</string>
    <string name="daftar_teksreg">Daftar</string>
    <string name="mulai_teksreg">mulai perjalananmu!</string>
    <string name="teksuser_reg">Masukan username anda disini</string>
    <string name="confpass_reg">Konfirmasi password anda</string>
    <string name="institusiteks_reg">Masukan nama institusi anda</string>
    <string name="nohape_reg">Masukan nomor handphone anda</string>
    <string name="daftarteks_reg">Daftar</string>
    <string name="sudahakun_reg">Sudah memiliki akun?</string>
    <string name="title_prestasi_rc">Title Prestasi</string>
    <string name="belumakun_log">Belum memiliki akun?</string>
</resources>