<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgbuku"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="400dp"
        android:paddingLeft="44dp"
        android:paddingRight="44dp"
        app:layout_constraintBottom_toBottomOf="@id/laylogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoedu" />

    <LinearLayout
        android:id="@+id/laylogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/loginijo" />

            <TextView
                android:id="@+id/textViewMasuk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ukuranpadingLogReg"
                android:layout_marginTop="30dp"
                android:layout_marginRight="@dimen/ukuranpadingLogReg"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/masuk_login"
                android:textColor="@color/white"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/teksdenganakun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ukuranpadingLogReg"
                android:layout_marginTop="90dp"
                android:layout_marginRight="@dimen/ukuranpadingLogReg"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/dengan_akun_anda_login"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:layout_constraintTop_toBottomOf="@id/textViewMasuk" />

            <EditText
                android:id="@+id/usernamelog"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="@dimen/ukuranpadingLogReg"
                android:layout_marginTop="160dp"
                android:layout_marginRight="@dimen/ukuranpadingLogReg"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_alternate_email_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/hint_email"
                android:padding="10dp"
                android:textColorHint="@color/ijohint" />

            <EditText
                android:id="@+id/passwordlog"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="@dimen/ukuranpadingLogReg"
                android:layout_marginTop="240dp"
                android:layout_marginRight="@dimen/ukuranpadingLogReg"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawableEnd="@drawable/baseline_remove_red_eye_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/hint_pass"
                android:padding="10dp"
                android:textColorHint="@color/ijohint" />

            <Button
                android:id="@+id/forgotPasswordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ukuranpadingLogReg"
                android:layout_marginTop="300dp"
                android:layout_marginRight="@dimen/ukuranpadingLogReg"
                android:background="?android:attr/selectableItemBackground"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/lupa_password"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/passwordlog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/belumPunyaAkunButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="170dp"
                android:layout_marginTop="300dp"
                android:layout_marginEnd="0dp"
                android:background="?android:attr/selectableItemBackground"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/belumakun_log"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/forgotPasswordButton"
                app:layout_constraintTop_toBottomOf="@id/masukTombol" />

            <Button
                android:id="@+id/masukTombol"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="@dimen/ukuranpadingLogReg"
                android:layout_marginTop="350dp"
                android:layout_marginRight="@dimen/ukuranpadingLogReg"
                android:backgroundTint="@color/white"
                android:elevation="14dp"
                android:fontFamily="@font/poppins_bold"
                android:layerType="hardware"
                android:text="@string/masuk_tombol"
                android:textColor="@color/hijua"
                android:textSize="24sp" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>